fix css on login/registration so less jumping of content when errors

--- a/eve-raiders-data/src/Login/Login.module.scss
+++ b/eve-raiders-data/src/Login/Login.module.scss
@@ -1,7 +1,6 @@
 .login {
   display: flex;
   align-items: center;
-  justify-content: center;
   height: 75%;
   flex-direction: column;
 }
