--- a/eve-raiders-data/src/Register/Register.module.scss
+++ b/eve-raiders-data/src/Register/Register.module.scss
@@ -1,9 +1,9 @@
 .register {
   display: flex;
   align-items: center;
-  justify-content: center;
   height: 75%;
   flex-direction: column;
+  margin-top: 15%;
 }
 
 .field {
